Fix overflow bug in chrome

--- a/www/public/css/messages.css
+++ b/www/public/css/messages.css
@@ -16,6 +16,7 @@ body {
 
 .mainSection {
 	box-sizing: border-box;
+	position: relative;
 }
 
 .threadList {
